# tree-sitter-hledger

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  TODO.md  binding.gyp  devbox.json  go.mod  grammar.js  ops  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  version
bindings/c/: tree-sitter-hledger.pc.in
bindings/c/tree_sitter/: tree-sitter-hledger.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hledger/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHLedgerTests/: TreeSitterHLedgerTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: account_directive.txt  auto_posting.txt  comments.txt  date.txt  directive_account.txt  directive_alias.txt  directive_apply-account.txt  directive_apply_account.txt  directive_commodity.txt  directive_d.txt  directive_decimal-mark.txt  directive_decimal_mark.txt  directive_include.txt  directive_p.txt  directive_payee.txt  directive_tag.txt  directive_y.txt  include_directive.txt  periodic_transaction.txt  posting.txt  transaction.txt  transactions.txt
